# maestro

./: .gitignore  ARCHITECTURE.md  COMMERCIAL_LICENSE_INFO.md  CONTEXT_AWARE_ORCHESTRATION_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  Dockerfile  ENHANCED_MAESTRO_ARCHITECTURE.md  ENHANCED_ORCHESTRATION_SUMMARY.md  FLAGSHIP_ENGINES_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  LLM_WEB_TOOLS_README.md  MAESTRO_ARCHITECTURE_CORRECTED.md  MAESTRO_COMPLETE.md  MAESTRO_PROTOCOL_IMPLEMENTATION_GUIDE.md  MANIFEST.in  MCP_SERVER_STATUS_REPORT.md  ORCHESTRATION_WORKFLOW_ANALYSIS.md  README.md  README_HTTP_SSE.md  SMITHERY_DEPLOYMENT.md  SMITHERY_DEPLOYMENT_FIX.md  SMITHERY_DEPLOYMENT_READY.md  SMITHERY_FIX_SUMMARY.md  SMITHERY_INSTALL.md  SMITHERY_JSONRPC_FORMAT_FIX.md  SMITHERY_MCP_METHODS_FIX.md  SMITHERY_SOLUTION.md  SMITHERY_TOOL_SCANNING_FIX.md  STATUS.md  colorado_springs_wedding_venues.csv  cursorchatdataset.py  debug_duckduckgo_response.html  debug_search.py  debug_search_scrape.py  deploy.py  diagnose_cursor_files.py  engines_todo.md  find_cursor_chats.py  (+58 more)
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  geometric-neb-script.py  geometric-optimize-script.py  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  pyppeteer-install-script.py  run-ase-script.py  undill
docs/: ARCHITECTURE.md  COMPONENTS.md  DEPLOYMENT.md  FUNCTIONALITY.md  TOOLS.md  USAGE.md
documentation/: ARCHITECTURE.md  COLLABORATIVE_ORCHESTRATION.md  INSTALLATION.md  MAESTRO_COMPREHENSIVE_ARCHITECTURE.md  MAESTRO_TOOLS_COMMUNICATION_REPORT.md  MIA_PROTOCOL_OVERVIEW.md  MIA_PROTOCOL_SPECIFICATION.md  QUICK_START.md  README.md  TOOL_REFERENCE.md  social_media_post.md
examples/: __init__.py  basic_usage.py  demo_maestro.py
scripts/: __init__.py  start_server.py  test_all_tools.py  test_client_session.py  test_complete_mcp.py  test_enhanced_server.py  test_health.py  test_raw_stdio.py  test_raw_tools_list.py  test_simple_init.py  test_sophisticated_tools.py  test_tool_scan.py  verify_installation.py
src/: __init__.py  app_factory.py  computational_tools.py  license_compliance.py  maestro_tools.py  main.py  request.json  static_tools_dict.py  test_request.json
src/engines/: __init__.py  apa_citation.py  astrophysics_engine.py  code_quality.py  data_analysis.py  design_thinking.py  engines_todo.md  epidemiology_engine.py  genomics_engine.py  grammar.py  intelligence_amplifier.py  language.py  language_arts_engine.py  mathematics.py  medbio_engine.py  molecular_dynamics_engine.py  particle_physics_engine.py  quantum_physics_engine.py  scientific_computing_engine.py  scientific_visualization_engine.py  vet_nutrition_rag_engine.py  vet_rad_onc_engine.py  web_verification.py
src/engines/knowledge_base/: vet_nutrition_kb.py
src/maestro/: __init__.py  adaptive_error_handler.py  api.py  config.py  context_aware_orchestrator.py  context_orchestrator.py  data_models.py  dependencies.py  enhanced_orchestrator.py  enhanced_tools.py  execution_engine.py  iae_discovery.py  knowledge_graph_engine.py  llm_client.py  llm_web_tools.py  maestro_iae.py  number_formatter.py  orchestration_engine.py  orchestration_framework.py  orchestrator.py  orchestrator_old.py  puppeteer_tools.py  quality_controller.py  schemas.py  sequential_execution_planner.py  session_models.py  tool_discovery.py  tool_workflow_mapper.py  tools.py  web.py  workflow_metadata.py
src/maestro/engines/: __init__.py  basic_arithmetic_engine.py
src/maestro/templates/: __init__.py  code_development.py  data_analysis.py  documentation.py  mathematical_analysis.py  research_analysis.py  web_development.py
src/profiles/: __init__.py  operator_profiles.py
tests/: README.md  __init__.py  run_all_tests.py  test_all_tools.py  test_comprehensive_maestro.py  test_direct_search.py  test_fixed_search.py  test_maestro_basic.py  test_orchestration.py  test_remaining_tools.py  test_report.json  test_stdio_server.py  test_tool_iae.py  test_tool_orchestrate.py  test_tool_search.py
